Sumathi_CloudFormation.yaml
Parameters:
  VpcCidrparamBlock:
    Description: Parameter Block for VPC CIDR
    Type: String
    Default: 10.24.0.0/16

  PublicSubnetCidrBlock:
    Description: Parameter for Public Subnet Cidr
    Type: String
    Default: 10.24.0.0/24
  PrivateSubnetCidrBlock:
    Description: Parameter for Private Subnet Cidr
    Type: String
    Default: 10.24.1.0/24

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-0fff1b9a61dec8a5f
    us-west-1:
      AMI: ami-0cf4e1fcfd8494d5b


Resources:
  myLab1VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrparamBlock
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
       - Key: Name
         Value: Lab1-VPC


  myLab1InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: Lab1-InternetGateway

  mylab1AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref myLab1VPC
      InternetGatewayId: !Ref myLab1InternetGateway
  
  myLab1PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myLab1VPC
      MapPublicIpOnLaunch: 'true'                   # To automatically Launch IP address
      CidrBlock: !Ref PublicSubnetCidrBlock
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: Lab1-PublicSubnet

  myLab1PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myLab1VPC
      Tags:
      - Key: Name
        Value: Lab1-PublicRouteTable

  myLab1PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref myLab1PublicSubnet
      RouteTableId: !Ref myLab1PublicRouteTable

  myLab1PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: myLab1InternetGateway                                  #To be found only after Internet Gateway successfully attached to the VPC
    Properties:
       RouteTableId: !Ref myLab1PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0                                 #Specifies the Destination match
       GatewayId: !Ref myLab1InternetGateway

### Private Subnet Routing ###
  myLab1PrivateSubnet:                                              ### Private Subnet ###
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref myLab1VPC
      CidrBlock: !Ref PrivateSubnetCidrBlock
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
      - Key: Name
        Value: Lab1-PrivateSubnet

  myLab1PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref myLab1VPC
      Tags:
      - Key: Name
        Value: Lab1-PrivateRouteTable


  myLab1PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref myLab1PrivateSubnet
      RouteTableId: !Ref myLab1PrivateRouteTable

  # Security Group for the Public EC2 instance in public subnet
  myLab1PublicEC2InstanceSGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows SSH access to the public EC2 instance
      VpcId: !Ref myLab1VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Lab1-PublicEC2SGrp

  # Security Group for the Private EC2 instance in private subnet
  myLab1PrivateEC2InstanceSGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH access from the Public instance
      VpcId: !Ref myLab1VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref myLab1JumpBoxSGrp
      Tags:
        - Key: Name
          Value: Lab1-PrivateEC2SGrp

  # Implementing Public EC2 Instance
  myLab1PublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: FridayHITTP_project
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]  # Select AMI ID depending on the region
      SubnetId: !Ref myLab1PublicSubnet
      SecurityGroupIds:
        - !Ref myLab1PublicEC2InstanceSGrp
      Tags:
        - Key: Name
          Value: Lab1-PublicEC2Instance

  # Implementing Private EC2 Instance
  myLab1PrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: FridayHITTP_project
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]  # Select AMI ID depending on the region
      SubnetId: !Ref myLab1PrivateSubnet
      SecurityGroupIds:
        - !Ref myLab1PrivateEC2InstanceSGrp
      Tags:
        - Key: Name
          Value: Lab1-PrivateEc2Instance

  # Security Group for Jump Host
  myLab1JumpBoxSGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows to SSH to the Jump Host
      VpcId: !Ref myLab1VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # Allow SSH from Public Subnet ( Recommended to use VPN range in organization )
      Tags:
        - Key: Name
          Value: Lab1-JumpBoxEC2SGrp
  # Jump Host in Public Subnet
  JumpBox:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      KeyName: FridayHITTP_project
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", AMI]  # Select AMI ID depending on the region
      SubnetId: !Ref myLab1PublicSubnet
      SecurityGroupIds:
        - !Ref myLab1JumpBoxSGrp
      Tags:
        - Key: Name
          Value: Lab1-JumpBox
